--- a/Y_Grullon_CMU_SnakeGame.html
+++ b/Y_Grullon_CMU_SnakeGame.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Snake Game Video</title>
+</head>
+<body>
+  
+<video width="320" height="240" autoplay muted>
+  <source src="Y_Grullon_CMU_SnakeGameVideo.mp4" type="video/mp4">
 
+</video>
+</body>
+</html>
