--- a/Y_Grullon_CMU_SnakeGame.html
+++ b/Y_Grullon_CMU_SnakeGame.html
@@ -4,8 +4,9 @@
   <title>Snake Game Video</title>
 </head>
 <body>
-  Hi
-<video width="350" height="260" autoplay muted>
+  
+  <b>CMU Graphics Snake Game</b>
+<video width="750" height="675" autoplay muted>
   <source src="Y_Grullon_CMU_SnakeGameVideo.mp4" type="video/mp4">
 
 </video>
