--- a/Y_Grullon_CMU_SnakeGame.html
+++ b/Y_Grullon_CMU_SnakeGame.html
@@ -7,7 +7,7 @@
   
   <b>CMU Graphics Snake Game</b>
   
-<video width="750" height="675" autoplay muted>
+<video width="750" height="675">
   <source src="Y_Grullon_CMU_SnakeGameVideo.mp4" type="video/mp4">
 
 </video>
