--- a/PythonVideo.html
+++ b/PythonVideo.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Snake Game Video</title>
+</head>
+<body>
+  
+  <b>CMU Graphics Snake Game</b>
+  
+<video width="750" height="675"autoplay muted>
 
+  <source src="PythonVideo" type="video/mp4">
+
+</video>
+</body>
+</html>
