--- a/PythonVideo.html
+++ b/PythonVideo.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Snake Game Video</title>
+  <title>Math Game</title>
 </head>
 <body>
   
-  <b>CMU Graphics Snake Game</b>
+  <b>Python Math Game</b>
   
 <video width="750" height="675"autoplay muted>
 
-  <source src="PythonVideo" type="video/mp4">
+  <source src="PythonVideo.zip" type="video/mp4">
 
 </video>
 </body>
