--- a/PythonVideo.html
+++ b/PythonVideo.html
@@ -9,7 +9,7 @@
   
 <video width="750" height="675"autoplay muted>
 
-  <source src="PythonVideo.zip" type="video/mp4">
+  <source src="PythonVideo.mp4" type="video/mp4">
 
 </video>
 </body>
